[project]
name = "comfyui-cluster-stun"
version = "0.1.0"
description = "STUN server for ComfyUI Cluster instance registration"
authors = [
    {name = "nomcycle", email = "sean@taostensor.llc"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi",  # HTTP API framework
    "uvicorn",   # ASGI server
    "pydantic",   # Data validation and serialization
]

[project.optional-dependencies]
dev = [
    "dotenv",
    "pytest",
    "aiohttp",
    "httpx",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[project.scripts]
stun-server = "src.server:main"